--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,8 +5,9 @@
   <title>Front</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
- 
+  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icon.png">
+
   
 </head>
 <body>
